исправлен метод getDataFromFile: теперь метод возвращает mutable лист